--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           pip install bincrafters_package_tools
           conan user
+      - name: Install libsecret
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsecret-1-dev
       - name: Run
         run: |
           python build.py
@@ -44,6 +48,10 @@ jobs:
         run: |
           pip install bincrafters_package_tools
           conan user
+      - name: Install libsecret
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsecret-1-dev
       - name: Run
         run: |
           python build.py
