--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -6,5 +6,11 @@ set(CMAKE_VERBOSE_MAKEFILE TRUE)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+if (MSVC)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
+else (MSVC)
+    set (CMAKE_CXX_STANDARD 11)
+endif (MSVC)
+
 add_executable(${PROJECT_NAME} test_package.cpp)
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
